<resources>
    <string name="app_name">Najma-Challenge-2</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="ok">OK (15%)</string>
    <string name="good">Good (18%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="craetor">Kunti Najma Jalia - AND 1</string>
</resources>