<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/form"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cost"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            android:inputType="numberSigned" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_service" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_amazing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing"
                android:checked="true"
                style="@style/radio"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"
                style="@style/radio"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                style="@style/radio"/>
        </RadioGroup>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_up_tip"
                style="@style/roundUp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            style="@style/button"/>
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_icon"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_form"
        app:layout_constraintVertical_bias="0.373" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/iv_icon"
        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            style="@style/amount"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tip"
            style="@style/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1000" />
    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        style="@style/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/craetor"/>
</androidx.constraintlayout.widget.ConstraintLayout>